# ros-sensor-monitor

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.sh
launch/: sensors.launch  web_interface.launch
msg/: SensorData.msg
scripts/: ir_sensor.py  ultrasonic_sensor.py  web_server.py
web/: app.js  index.html  style.css
