<?xml version="1.0"?>
<package format="2">
  <name>sensor_monitor</name>
  <version>0.1.0</version>
  <description>ROS package for monitoring ultrasonic and IR sensors</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
</package>
